update notebook train YOLOv5

--- a/source/ppe_yolov5.ipynb
+++ b/source/ppe_yolov5.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "## **Format Dataset for YOLOv5**"
+    "### **Format Dataset for YOLOv5**"
    ]
   },
   {
@@ -201,7 +201,7 @@
     "tags": []
    },
    "source": [
-    "## **Setup environment for YOLOv5**"
+    "### **Setup environment for YOLOv5**"
    ]
   },
   {
@@ -350,7 +350,7 @@
     "tags": []
    },
    "source": [
-    "## **Create YAML file**"
+    "### **Create YAML file**"
    ]
   },
   {
@@ -391,10 +391,10 @@
     "        \"Person\", \"Ear\", \"Earmuffs\", \"Face\", \"Face-guard\", \"Face-mask-medical\",\n",
     "        \"Foot\", \"Tools\", \"Glasses\", \"Gloves\", \"Helmet\", \"Hands\", \"Head\",\n",
     "        \"Medical-suit\", \"Shoes\", \"Safety-suit\", \"Safety-vest\"\n",
-    "    ],  \n",
-    "    \"nc\": 17,  \n",
-    "    \"test\": \"/kaggle/working/data/images/test\",  \n",
-    "    \"train\": \"/kaggle/working/data/images/train\", \n",
+    "    ],\n",
+    "    \"nc\": 17,\n",
+    "    \"test\": \"/kaggle/working/data/images/test\",\n",
+    "    \"train\": \"/kaggle/working/data/images/train\",\n",
     "    \"val\": \"/kaggle/working/data/images/val\"\n",
     "}\n",
     "\n",
@@ -422,7 +422,7 @@
     "tags": []
    },
    "source": [
-    "## **Update AMP Autocast Syntax in train.py**"
+    "### **Update AMP Autocast Syntax in train.py**"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "tags": []
    },
    "source": [
-    "## **Train model YOLOv5**"
+    "### **Train model YOLOv5**"
    ]
   },
   {
@@ -886,7 +886,7 @@
     "tags": []
    },
    "source": [
-    "## **Evaluate on validation set**"
+    "### **Evaluate on validation set**"
    ]
   },
   {
@@ -966,7 +966,7 @@
     "tags": []
    },
    "source": [
-    "## **Evaluate on test set**"
+    "### **Evaluate on test set**"
    ]
   },
   {
@@ -1032,87 +1032,6 @@
     "               --batch-size 16 \\\n",
     "               --task test \\\n",
     "               --project /kaggle/working/results/yolov5/test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15ef26d1",
-   "metadata": {
-    "papermill": {
-     "duration": 0.316356,
-     "end_time": "2025-01-14T06:52:13.212553",
-     "exception": false,
-     "start_time": "2025-01-14T06:52:12.896197",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "## **Zip result folder**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e5621b54",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-14T06:52:13.839756Z",
-     "iopub.status.busy": "2025-01-14T06:52:13.839442Z",
-     "iopub.status.idle": "2025-01-14T06:52:18.532815Z",
-     "shell.execute_reply": "2025-01-14T06:52:18.531790Z"
-    },
-    "papermill": {
-     "duration": 5.009367,
-     "end_time": "2025-01-14T06:52:18.534416",
-     "exception": false,
-     "start_time": "2025-01-14T06:52:13.525049",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder /kaggle/working/results has been compressed into /kaggle/working/results.zip\n"
-     ]
-    }
-   ],
-   "source": [
-    "import zipfile\n",
-    "import os\n",
-    "\n",
-    "def zip_folder(folder_path, output_zip_path):\n",
-    "    \"\"\"\n",
-    "    Compress an entire folder into a .zip file.\n",
-    "\n",
-    "    Args:\n",
-    "        folder_path (str): Path to the folder to be compressed.\n",
-    "        output_zip_path (str): Path to save the resulting zip file.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # Create a new zip file with write mode and compression\n",
-    "        with zipfile.ZipFile(output_zip_path, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
-    "            # Traverse through all files in the folder\n",
-    "            for root, dirs, files in os.walk(folder_path):\n",
-    "                for file in files:\n",
-    "                    # Get the full path of the current file\n",
-    "                    full_path = os.path.join(root, file)\n",
-    "                    # Calculate the relative path for the zip file\n",
-    "                    relative_path = os.path.relpath(full_path, folder_path)\n",
-    "                    # Add the file to the zip archive with its relative path\n",
-    "                    zipf.write(full_path, relative_path)\n",
-    "        print(f\"Folder {folder_path} has been compressed into {output_zip_path}\")\n",
-    "    except Exception as e:\n",
-    "        # Catch any exceptions and print an error message\n",
-    "        print(f\"Error while compressing the folder: {e}\")\n",
-    "\n",
-    "# Use the function to compress a folder\n",
-    "results_folder = \"/kaggle/working/results\"  # Path to the folder to compress\n",
-    "output_zip = \"/kaggle/working/results.zip\"  # Path for the output zip file\n",
-    "zip_folder(results_folder, output_zip)"
    ]
   }
  ],
