update notebook train Faster R-CNN

--- a/source/ppe_faster_rcnn.ipynb
+++ b/source/ppe_faster_rcnn.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fe421c5a",
+   "metadata": {},
+   "source": [
+    "#### **Clone Vision Utilities for Faster R-CNN Training**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6389c11b",
@@ -51,6 +59,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6a12e54",
+   "metadata": {},
+   "source": [
+    "#### **Import Required Libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b37b5610",
@@ -82,13 +98,14 @@
    ],
    "source": [
     "import os\n",
-    "import shutil\n",
-    "import logging\n",
-    "import random\n",
-    "import warnings\n",
-    "import time\n",
     "import io\n",
     "import sys\n",
+    "import time\n",
+    "import random\n",
+    "import shutil\n",
+    "import warnings\n",
+    "import logging\n",
+    "\n",
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
     "\n",
@@ -101,7 +118,7 @@
     "# Machine learning and deep learning libraries\n",
     "import torch\n",
     "import torchvision\n",
-    "from torchvision import transforms as torchtrans  \n",
+    "from torchvision import transforms as torchtrans\n",
     "from torchvision.models.detection.faster_rcnn import FastRCNNPredictor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import precision_recall_fscore_support\n",
@@ -113,7 +130,15 @@
     "# Custom libraries\n",
     "import utils\n",
     "import transforms as T\n",
-    "import engine "
+    "import engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17c28a23",
+   "metadata": {},
+   "source": [
+    "#### **Organize and Split Dataset for Traning**"
    ]
   },
   {
@@ -233,7 +258,7 @@
     "            shutil.copy(image_file, dst_images)\n",
     "        else:\n",
     "            print(f\"Image not found: {image_file}\")\n",
-    "            \n",
+    "\n",
     "        if os.path.exists(label_file):\n",
     "            shutil.copy(label_file, dst_labels)\n",
     "        else:\n",
@@ -259,6 +284,14 @@
     "           os.path.join(output_dir, \"test\", \"labels\"))\n",
     "\n",
     "print(\"Data prepared!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2241a74",
+   "metadata": {},
+   "source": [
+    "#### **Validate and Update Invalid Bounding Boxes**"
    ]
   },
   {
@@ -327,7 +360,7 @@
     "                    invalid_bboxes.append((xmin, xmax, ymin, ymax))\n",
     "        except Exception as e:\n",
     "            print(f\"Error validating {file_path}: {e}\")\n",
-    "        \n",
+    "\n",
     "        return invalid_bboxes\n",
     "\n",
     "    def find_invalid_files(self, labels_dir):\n",
@@ -404,7 +437,7 @@
     "\n",
     "                except Exception as e:\n",
     "                    print(f\"Error processing file {file_path}: {e}\")\n",
-    "    \n",
+    "\n",
     "    def process_all_folders(self):\n",
     "        \"\"\"\n",
     "        Validate and update bounding boxes in train, val, and test label folders.\n",
@@ -478,6 +511,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acad6154",
+   "metadata": {},
+   "source": [
+    "#### **Define Custom Dataset Class and Dataloaders**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d28d6fce",
@@ -512,14 +553,14 @@
     "\n",
     "        # Ensure the same number of images and labels\n",
     "        assert len(self.images) == len(self.labels), \"Mismatch between number of images and labels\"\n",
-    "        \n",
+    "\n",
     "        # Optionally ensure filenames (without extensions) match between images and labels\n",
     "        for img, label in zip(self.images, self.labels):\n",
     "            assert img.split('.')[0] == label.split('.')[0], f\"Image {img} and label {label} do not match\"\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.images)\n",
-    "        \n",
+    "\n",
     "    def __getitem__(self, idx):\n",
     "        img_path = os.path.join(self.root, \"images\", self.images[idx])\n",
     "        label_path = os.path.join(self.root, \"labels\", self.labels[idx])\n",
@@ -538,7 +579,7 @@
     "            ymax = int(bbox.find(\"ymax\").text)\n",
     "            boxes.append([xmin, ymin, xmax, ymax])\n",
     "            name = obj.find(\"name\").text\n",
-    "            \n",
+    "\n",
     "            if name in self.class_mapping:\n",
     "                labels.append(self.class_mapping[name])\n",
     "            else:\n",
@@ -546,7 +587,7 @@
     "\n",
     "        # Convert boxes to numpy array for albumentations (no manual normalization here)\n",
     "        boxes = np.array(boxes, dtype=np.float32)\n",
-    "        \n",
+    "\n",
     "        # Apply transformations if provided\n",
     "        if self.transforms:\n",
     "            # albumentations requires input to be a dictionary with 'image' and 'bboxes'\n",
@@ -582,7 +623,7 @@
     "# =================================\n",
     "def collate_fn(batch):\n",
     "    return tuple(zip(*batch))\n",
-    "    \n",
+    "\n",
     "def get_dataloaders(data_dir, class_mapping, batch_size=4):\n",
     "    # Define albumentations transformations\n",
     "    image_transforms = A.Compose(\n",
@@ -593,7 +634,7 @@
     "        ],\n",
     "        bbox_params=A.BboxParams(format='pascal_voc', label_fields=['labels'])\n",
     "    )\n",
-    "    \n",
+    "\n",
     "\n",
     "\n",
     "    # Create dataset instances\n",
@@ -610,29 +651,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "50d705e2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-14T02:10:23.076874Z",
-     "iopub.status.busy": "2025-01-14T02:10:23.076589Z",
-     "iopub.status.idle": "2025-01-14T02:10:23.080006Z",
-     "shell.execute_reply": "2025-01-14T02:10:23.079260Z"
-    },
-    "papermill": {
-     "duration": 0.121436,
-     "end_time": "2025-01-14T02:10:23.081305",
-     "exception": false,
-     "start_time": "2025-01-14T02:10:22.959869",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "7f12dc77",
+   "metadata": {},
    "source": [
-    "import torch\n",
-    "torch.cuda.empty_cache()"
+    "#### **Setup Logging, Class Mapping, and Model Initialization**"
    ]
   },
   {
@@ -713,6 +736,14 @@
     "    model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
     "    print(\"Model Done!\")\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feae7ddf",
+   "metadata": {},
+   "source": [
+    "#### **Train and Evaluate Model**"
    ]
   },
   {
@@ -1476,32 +1507,29 @@
     }
    ],
    "source": [
-    "# ========================\n",
-    "# Train and evaluate model\n",
-    "# ========================\n",
     "def train_and_evaluate(data_dir: str, num_epochs: int = 10, save_dir: str = 'models'):\n",
     "    batch_size = 16\n",
     "    num_classes = len(class_mapping)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    logger.info(f\"Using device: {device}\")\n",
-    "    \n",
+    "\n",
     "    # Load Data\n",
     "    train_loader, val_loader, test_loader = get_dataloaders(data_dir, class_mapping, batch_size)\n",
-    "    \n",
+    "\n",
     "    # Initialize Model\n",
     "    model = get_model(num_classes)\n",
     "    model.to(device)\n",
-    "    \n",
+    "\n",
     "    # Optimizer\n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01, momentum=0.9, weight_decay=0.0005)\n",
     "\n",
     "    # Training Loop\n",
     "    for epoch in range(num_epochs):\n",
     "        logger.info(f\"Starting epoch {epoch + 1}/{num_epochs}\")\n",
-    "        \n",
+    "\n",
     "        # Train One Epoch\n",
     "        train_one_epoch(model, optimizer, train_loader, device, epoch, print_freq=20)\n",
-    "        \n",
+    "\n",
     "        # Evaluate on Validation Set\n",
     "        logger.info(\"Evaluating on validation set...\")\n",
     "        metrics = evaluate(model, val_loader, device)\n",
@@ -1526,11 +1554,11 @@
     "        save_dir = \"/kaggle/working/models\"\n",
     "        if not os.path.exists(save_dir):\n",
     "            os.makedirs(save_dir)\n",
-    "            \n",
+    "\n",
     "        num_epochs = 10\n",
-    "        \n",
+    "\n",
     "        model, final_metrics = train_and_evaluate(data_dir, num_epochs, save_dir)\n",
-    "        \n",
+    "\n",
     "    except Exception as e:\n",
     "        logger.error(f\"Program failed: {str(e)}\")\n",
     "        raise"
